----------
v6.2.4-git
----------

[jan] Fix JS error when using regexp characters in search string.
[mjr] Ensure we have a valid MIME part to display in thread view (Bug #13653).


------
v6.2.3
------

[mms] Fix handling authentication errors when they take place during an attempt
      to determine a mailbox's namespace.
[mms] Fix some folder display issues when not using IMAP subscriptions in
      dynamic view (Bug #13553).
[mms] Fix accessing dynamic compose page when file uploads are not available
      (Bug #13580).
[mms] Fix saving unique browser preferences for a specific backend in dynamic
      view.
[mms] Fix toggling select all checkbox in both dynamic mailbox layouts.


------
v6.2.2
------

[mms] Ensure that search/POP3 mailbox listings are saved even if there is an
      issue with the underlying cache backend.
[mms] Fix replying to non-UTF-8 messages when the 'reply_charset' preference
      is true.
[jan] Fix vCard MIME viewer.
[jan] Fix MIME viewer form actions in basic view (Bug #12677).
[mms] Don't store/retrieve message history data if the Message-ID is
      missing/invalid.
[mms] Fix resuming draft from mailbox page in basic view.
[mms] Fix displaying Virtual Trash mailbox (Bug #13418).
[mms] Fix menu actions on the minimal message page (Bug #13440).
[jan] Fix switching to HTML editor in basic mode if signature display is not
      active.
[mms] Fix expiring session cached mailbox data when mailbox information
      changes.
[mms] Fix updating viewport immediately after deleting messages on POP3
      servers.


------
v6.2.1
------

[mjr] Fix iTip handling when recurrence exceptions are present (Bug #13399).
[mms] Fix displaying Sent mailbox label when multiple sent-mail mailboxes are
      defined.
[mms] Fix advanced search in all mailboxes if virtual folders or remote
      accounts exist (Bug #13384).
[mms] Fix regression in automatically expanding deeply nested mailboxes in the
      dynamic folder list.