@@ -2,6 +2,7 @@
 v6.2.4-git
 ----------
 
+[mms] Fix message saving when using a POP3 server.
 [jan] Fix JS error when using regexp characters in search string.
 [mjr] Ensure we have a valid MIME part to display in thread view (Bug #13653).
 
